# BuildMachine

./: .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.cpp  run.sh  run_dev_container.sh
AsioTest/: Printer.h  PrinterStrand.h  TimerExamples.cpp  TimerExamples.h  main.cpp
BrainApp/: CMakeLists.txt  DataSource.cpp  SearchItem.h  main.cpp
Examples/: .gitignore  build.sh
Examples/Test/: CMakeLists.txt  tests.cpp
Test/: whattotest.cpp
ci/: Dockerfile  Dockerfile-alpine  build_image.sh  push_image.sh
projects/: .main.cpp.swp  CMakeLists.txt  a.out  build.sh
projects/AsioTest/: AsioIncludes.h  CMakeLists.txt  Printer.cpp  Printer.h  PrinterStrand.cpp  PrinterStrand.h  TimerExamples.cpp  TimerExamples.h  main.cpp
projects/BrainApp/: CMakeLists.txt  DataSource.h  SearchItem.cpp
projects/Test/: CMakeLists.txt
